tests/spec/compile-fail/074_layout_on_non_struct.zn
// category: compile-fail
// profile: freestanding
// purpose: layout attributes apply only to struct declarations

module tests.fail.layoutOnNonStruct;

@layout(Source)
fn bad() -> I32 { // expected-error: @layout can only be applied to struct declarations
    return 1;
}
